--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "simple-react-color-generator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://geoffctn.github.io/simple-react-color-generator/",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
@@ -27,6 +29,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage" : "https://geoffctn.github.io/simple-react-color-generator/"
+  }
 }
